<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_weight="1">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comments_add_text"
            android:hint="@string/add_comment_string"
            android:inputType="text"
            android:autofillHints="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_comment"
            android:id="@+id/add_comment_button"
            android:clickable="true"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
        <ListView
            android:id="@+id/comments_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_previous"
            android:id="@+id/goto_previous"
            android:clickable="true"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comments_page_num"
            android:hint="@string/comment_page_input_hint"
            android:inputType="text"
            android:autofillHints="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_next"
            android:id="@+id/goto_next" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_determined"
            android:id="@+id/goto_determined" />
    </LinearLayout>

</LinearLayout>
